--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,14 @@
 [Oo]bj/
 [Bb]uild/
 [Bb]uilds/
+[Ll]ogs/
+[Mm]emoryCaptures/
 Assets/AssetStoreTools*
+
+
+#never ignore asset meta data
+
+!/[Aa]ssets/**/*.meta
 
 # Visual Studio cache directory
 .vs/
@@ -22,11 +29,14 @@ ExportedObj/
 *.booproj
 *.svd
 *.pdb
+*.mdb
 *.opendb
+*.VC.db
 
 # Unity3D generated meta files
 *.pidb.meta
 *.pdb.meta
+*.mdb.meta
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
@@ -34,3 +44,6 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+
+# Crashlytics generated file
+crashlytics-build.properties
